fix null values validation